--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.22.1",
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
     "notistack": "^3.0.1",
