--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.22.1",
+    "@mui/x-date-pickers": "^7.22.1",
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.13",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
