--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.16.7",
+    "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.22.1",
+    "@mui/x-date-pickers": "^7.22.1",
     "@tanstack/react-query": "^5.35.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.13",
     "notistack": "^3.0.1",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.22.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
