--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.13.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
